--- a/Week3-project/css/sign.css
+++ b/Week3-project/css/sign.css
@@ -152,6 +152,12 @@ a{
   text-decoration:none;
   color:#000000;
 }
+
+.hidden{
+    display: none;
+}
     
-    
-    
+.red{
+    text-align: center;
+    color: red;
+}
