--- a/Week3-project/css/cart.css
+++ b/Week3-project/css/cart.css
@@ -1,67 +1,17 @@
-
-
-.quantity {
-    float: left;
-    margin-right: 15px;
-    background-color: #eee;
-    position: relative;
-    width: 80px;
-    overflow: hidden
+body {
+    padding-top: 80px;
 }
 
-.quantity input {
-    margin: 0;
-    text-align: center;
-    width: 15px;
-    height: 15px;
-    padding: 0;
-    float: right;
-    color: #000;
-    font-size: 20px;
-    border: 0;
-    outline: 0;
-    background-color: #F6F6F6
+.show-cart li {
+    display: flex;
 }
 
-.quantity input.qty {
-    position: relative;
-    border: 0;
-    width: 100%;
-    height: 40px;
-    padding: 10px 25px 10px 10px;
-    text-align: center;
-    font-weight: 400;
-    font-size: 15px;
-    border-radius: 0;
-    background-clip: padding-box
+.card {
+    margin-bottom: 20px;
 }
 
-.quantity .minus, .quantity .plus {
-    line-height: 0;
-    background-clip: padding-box;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    -webkit-background-size: 6px 30px;
-    -moz-background-size: 6px 30px;
-    color: #bbb;
-    font-size: 20px;
-    position: absolute;
-    height: 50%;
-    border: 0;
-    right: 0;
-    padding: 0;
-    width: 25px;
-    z-index: 3
-}
-
-.quantity .minus:hover, .quantity .plus:hover {
-    background-color: #dad8da
-}
-
-.quantity .minus {
-    bottom: 0
-}
-.shopping-cart {
-    margin-top: 20px;
+.card-img-top {
+    width: 200px;
+    height: 200px;
+    align-self: center;
 }
